--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
     "main": "index.js",
     "scripts": {
         "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
-        "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+        "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+        "server": "nodemon index.js",
+        "start": "nodemon index.js"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-build-a-web-api"
     },
     "dependencies": {
-        "express": "4.18.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.1",
         "helmet": "5.0.2",
         "knex": "2.0.0",
+        "nodemon": "^3.1.0",
         "sqlite3": "5.0.8"
     },
     "devDependencies": {
